--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.9",
+    "@apollo/client-integration-nextjs": "^0.12.3",
     "graphql": "^16.11.0",
     "next": "15.4.5",
     "react": "19.1.0",
